// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication flux Should authenticate user with valid credentials 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot read property 'cookie' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should confirm user account 1`] = `
Object {
  "data": Object {
    "userConfirmAccount": Object {
      "email": "teste@email.com",
      "id": "189de3da-1c11-4222-acb9-090949e16074",
      "isVerified": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should generate reset token 1`] = `
Object {
  "data": Object {
    "userForgotPassword": Object {
      "id": "505db9cb-10fe-4d15-9607-83bab27045a4",
      "passwordResetToken": "87683c47e6dba8d9a23e67f50e1a08add67166c4",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should register user and generate emailConfirmationToken 1`] = `
Object {
  "data": Object {
    "userRegister": Object {
      "email": "kowesor320@vvaa1.com",
      "emailConfirmationToken": "1993b235f230e804e71074eab3fbcb099017b806",
      "firstName": "mytest",
      "id": "1fc67d35-acec-463c-bb37-b677028e9df5",
      "lastName": "lastnametest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should reset user password 1`] = `
Object {
  "data": Object {
    "userResetPassword": Object {
      "email": "teste@email.com",
      "id": "8abed105-47bf-4931-b9a3-814da2bf63dc",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query users Should return multiple users 1`] = `
Object {
  "data": Object {
    "users": Array [
      Object {
        "email": "teste@email.com",
        "firstName": "teste1",
        "id": "61c3cec6-8ea8-435e-b124-6a238a9fe7af",
        "lastName": "teste last",
      },
      Object {
        "email": "teste2@email.com",
        "firstName": "teste2",
        "id": "35bafc2a-cfe8-44e9-8dde-ff298f939e21",
        "lastName": "teste2 last",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
